--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
+.container-fluid{
+	height: 100%;
+}
+
 section{
 	border: 2px solid black;
-	margin-top: 15%;
+	width: 50%;
+	margin: auto;
+}
+
+button{
+	width: 200px;
+	/*margin: auto;*/
 }
 
 
