--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
-.container-fluid{
-	height: 100%;
+section{
+	max-width: 700px;
+	margin:auto;
 }
 
-section{
-	border: 2px solid black;
-	width: 50%;
-	margin: auto;
+blockquote{
+	background-color: #eee;
+	border: 2px solid blue;
+	margin-top: 150px;
 }
 
 button{
